tests/NormalTests/paczka1/fuzzy1/52957171.err
Error in line 9: L1Ms21i S15 21,5
Error in line 17: wYFmO A645 42,0
Error in line 29: i0ShtOnf S979 84,7
Error in line 35: i0ShtOnf A255 65,9
